# Deep-Risk-OPP

./: .env.example  .gitignore  01-GOR方向框架.md  02-个股四维研判.md  03-接盘论框架.md  04-Token美元进度.md  05-对冲策略选择.md  06-风控日历.md  07-决策审计框架.md  08-六大师映射.md  09-产能周期框架.md  10-催化剂日历框架.md  11-资本三流框架.md  README.md  README_CN.md  SKILL.md  capital_flows_latest.json  config.py  gor_latest.json  profile-README.md  pyproject.toml  requirements.txt  run.py  ⏰ 风控日历生成器.md  ❓ 全知识库FAQ.md  🌊 美元百年换锚深度长文.md  🌊 资本三流观测站.html  🎯 期权组合模拟器.md  📊 A股股权结构速查表.md  📊 投资决策看板.html  📋 09.谈话统一索引.md  📋 决策框架索引.md  📐 全知识库双向链接图谱.md  📖 卢麒元理论体系白皮书.md  🚀 OPC+AI商业模式实战指南.md  🛡️ 对冲作战手册.html
.github/workflows/: daily.yml
scripts/: figi_mapper.py  gor_daily.py  run_update.bat  weekly_data_pull.py
wayfinder/: README.md  config.py  flows_latest.json  requirements.txt  run.py
wayfinder/scripts/: flow_scanner.py
看板日志/: 2026-06-19-gor-data.json  2026-06-19-每日简报.md  2026-06-25-gor-data.json  2026-06-25-变化比对报告.md  2026-06-25-每日简报.md  2026-07-05-gor-data.json  2026-07-05-变化比对报告.md  2026-07-06-gor-data.json  2026-07-12-gor-data.json  2026-07-12-变化比对报告.md  2026-07-15-变化比对报告.md  2026-07-16-gor-data.json  2026-07-16-变化比对报告.md  LinkedIn_GOR_Pulse_Weekly_001_2026-07-13.md  backtest_2020-01-01_to_2026-07-16.json  forecast_2026-07-17.json  linkedin_post_0715.md  report_2026-07-17.html  update_log.txt  📋 看板日志索引.md
